레시피 4-01-i 예제의 단순 수정